# ic_ps_bsm

./: .gitignore  README.md  meson.build  pyproject.toml  setup.py
analysis/overdensity/: 1d_limits.py  full_analysis.py
analysis/power_law/: NGC1068_ps.py  PKS-1424+240.py  TXS-0506+056.py  full_analysis.py  reanalyse.py
analysis/secret_interactions/: NGC-1068.py  PKS-1424+240.py  TXS-0506+056.py  analysis.py  detsigyield.py  full_analysis.py  future_sensitivity.py  skyllh_helpers.py
ic_ps/: meson.build
ic_ps/bsm/: meson.build  temp.cpp  temp.hpp
ic_ps/bsm/transport_solver/: constants.hpp  meson.build  secret_interactions.cpp  secret_interactions.hpp  sm_interactions.cpp  sm_interactions.hpp  transport_flux_redshift.cpp  transport_flux_redshift.hpp  transport_solver.cpp  utils.cpp  utils.hpp
ic_ps/core/: bkg_flux.py  convolve.py  dataset.py  eff_area.py  flux.py  hdf5_utils.py  likelihood.py  likelihood_pl.py  meson.build  pdf.py  smear_mat.py
ic_ps/skyllh/: analyses.py  meson.build  signalpdf.py  skyllh_helpers.py
ic_ps/transport_solver/: meson.build  relic_scattering.py  temp.cpp  temp.hpp
transport_solver/: build.sh  transport_solver.cpp
